--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,36 @@
-index.html
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+<h1>Animals</h1>
+
+<div class="row">
+<div class="col-lg-4 col-md-6 col-sm-12">
+<section class="Elephant">
+<h2>Elephant</h2>
+<p>Elephants are mammals of the family Elephantidae and the largest existing land animals. Three species are currently recognised: the African bush elephant, the African forest elephant, and the Asian elephant. Elephantidae is the only surviving family of the order Proboscidea; extinct members include the mastodons.</p>
+</section>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-12">
+<section class="Tiger">
+<h2>Tiger</h2>
+<p>The tiger is the largest extant cat species and a member of the genus Panthera. It is most recognisable for its dark vertical stripes on orange-brown fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar.</p>
+</section>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-12">
+<section class="Lion">
+<h2>Lion</h2>
+<p>The lion is a species in the family Felidae and a member of the genus Panthera. It is most recognisable for its muscular, deep-chested body, short, rounded head, round ears, and a hairy tuft at the end of its tail. It is sexually dimorphic; adult male lions have a prominent mane. </p>
+</section>
+</div>
+</div>
+</body>
+</html>
+
